--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             align-items: center;
             height: 100vh;
             font-family: sans-serif;
-
+            background-size: cover;
             
         }
 
