--- a/index.html
+++ b/index.html
@@ -20,29 +20,6 @@
             height: 100vh;
             font-family: sans-serif;
             background-size: cover;
-            
-        }
-
-        .btnsearch {
-            width: 40px;
-            height: 40px;
-            border-radius: 50px;
-            background-color: #9c9b9bd0;
-            cursor: pointer;
-
-
-        }
-
-        .btnsearch:hover {
-            background-color: #c7c7c7;
-        }
-
-        .searchbox {
-            width: 200px;
-            height: 30px;
-            border-radius: 30px;
-            background-color: #4b4a4ad0;
-            color: white;
 
         }
 
@@ -56,6 +33,33 @@
 
         }
 
+        .btnsearch {
+            width: 40px;
+            height: 40px;
+            border-radius: 50px;
+            background-color: #9c9b9bd0;
+            cursor: pointer;
+
+
+        }
+
+        .btnsearch,
+        .currentlocbtn:hover {
+            background-color: #c7c7c7;
+        }
+
+        .searchbox,
+        .currentlocbtn {
+            width: 200px;
+            height: 30px;
+            border-radius: 30px;
+            background-color: #4b4a4ad0;
+            color: white;
+            cursor: pointer;
+
+        }
+
+
         .search {
             display: flex;
             align-items: center;
@@ -67,8 +71,12 @@
     <div class="container">
         <div class="search">
             <input type="text" placeholder="Search City" class="searchbox">
+
             <button type="submit" class="btnsearch"><i class="fa fa-search"></i></button>
         </div>
+        <br>
+        <button class="currentlocbtn">Current Location</button>
+        <br>
         <br>
         <h2><b>
                 <div class="cityname">
