--- a/index.html
+++ b/index.html
@@ -78,30 +78,33 @@
         <button class="currentlocbtn">Current Location</button>
         <br>
         <br>
-        <h2><b>
-                <div class="cityname">
+        <div id="errordiv">Something Going Wrong!</div>
+        <div id="infocard" >
+            <h2><b>
+                    <div class="cityname">
 
+                    </div>
+                </b></h2>
+
+            <br>
+            <h3>
+                <div class="temperature">
+                    temperature
                 </div>
-            </b></h2>
+            </h3>
+            <br>
 
-        <br>
-        <h3>
-            <div class="temperature">
-                temperature
+            <div class="clouddiscrip">
+                cloud
             </div>
-        </h3>
-        <br>
 
-        <div class="clouddiscrip">
-            cloud
-        </div>
+            <div class="humidity">
+                humidity
+            </div>
 
-        <div class="humidity">
-            humidity
-        </div>
-
-        <div class="windspeed">
-            wind speed
+            <div class="windspeed">
+                wind speed
+            </div>
         </div>
     </div>
 
